# vulkan-learning

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: glm-defs.cmake  import-std.cmake  shader-compiler.cmake  win32-defs.cmake
src/app/: CMakeLists.txt  application.ixx  main.cpp  pch.hpp
src/gfx/: CMakeLists.txt  buffer.ixx  command_buffer.ixx  device.ixx  graphics.ixx  lib-usage.cpp  pch.hpp  pipeline_basic.ixx  renderer.ixx
src/gfx/pipelines/: pipeline_basic.ixx  pipeline_pc_vb.ixx  pipeline_pc_vb_cb.ixx
src/platform/: CMakeLists.txt  base_types.ixx  clock.ixx  console.ixx  console_hue.ixx  file_io.ixx  input.ixx  pch.hpp  platform.ixx  window.ixx
src/shaders/: CMakeLists.txt  basic_color_blend.vs.hlsl  basic_mesh.vs.hlsl  basic_shader.vs.hlsl
